@@ -1,6 +1,7 @@
 /*  -*- Mode: Asm -*-  */
 
 /* Copyright (c) 2002  Michael Stumpf  <mistumpf@de.pepperl-fuchs.com>
+   Copyright (c) 2005  Dmitry Xmelkov
    All rights reserved.
 
 
@@ -38,10 +39,30 @@
     pow.S is part of     FPlib V 0.3.0       ported to avr-as
     for details see readme.fplib
 
- *----------------------------------------------------------------------------------------
+ *---------------------------------------------------------------------
  *
- *
- *	A = pow(x,y) = exp( log(x)*y )  | x > 0
+ *	A = pow(x,y)
+
+    double pow (double x, double y)
+    {
+	return
+	      !isfinite(x) || !isfinite(y)  ?  NaN
+	    : (x > 0)                  ?  exp(log(x)*y)
+	    : (x == 0 && y > 0)        ?  0
+	    : (x == 0 && y <= 0)       ?  NaN
+	    : (is_int(y) && (y % 2))   ?  sign(x)*exp(log(fabs(x))*y)
+	    : (is_int(y) && !(y % 2))  ?  exp(log(fabs(x))*y)
+	    : NaN ;
+    }
+
+ Notes:
+   * C99 says:
+    "A domain error occurs if the result cannot be represented when x is
+    zero and y is less than or equal to zero. A range error may occur."
+    In this implementation pow(0,0)=NaN (shortest code).
+   *  To do not enlarge program size, the case y==0 is not analized
+    separatly.
+   *  __fp_tstA, __fp_tstB will global in future.
  */
 
 #include "gasava.inc"
@@ -50,74 +71,126 @@
 
           TEXT_SEG(fplib, pow)
           FUNCTION(pow)
-
 GLOBAL(pow)
-   TST   rB3
-   BREQ  10f		; x ^ 0 = 1.0
-   TST   rA3
-   BRMI  1f
-   BREQ  10f
+  /* Check for NaN right here, before calling exp() as the latter
+     is known to be buggy for NaN arguments. */
+	rcall	__fp_tstB
+	brcs	.L_nan		; isfinite(y)
+	rcall	__fp_tstA
+	brcs	.L_ret		; !isfinite(x)
+	brts	.L_negx		; x < 0
+	brne	.L_pow
+  /* x == 0	*/
+	rcall	__fp_tstB
+	breq	.L_nan		; y == 0
+	brtc	.L_ret		; y > 0  -->  return 0
+.L_nan:
+	rjmp	__fp_nan
 
-   PUSH  rB3
-   PUSH  rB2
-   PUSH  rB1
-   PUSH  rB0
-   RCALL _U(log)
-   POP   rB0
-   POP   rB1
-   POP   rB2
-   POP   rB3
-   RCALL _U(__mulsf3)
-   RJMP  _U(exp)
+.L_pow:
+	push	rB3
+	push	rB2
+	push	rB1
+	push	rB0
+	rcall	log
+	pop	rB0
+	pop	rB1
+	pop	rB2
+	pop	rB3
+	rcall	__mulsf3
+	rjmp	exp
 
-1:
-	/* x < 0 -> no rational power allowed
-	 *          check if B is an integer number
-	 * if yes then pow(x,y) =
-         */
-   PUSH  rA3
-   PUSH  rA2
-   PUSH  rA1
-   PUSH  rA0
-   PUSH  rB3
-   PUSH  rB2
-   PUSH  rB1
-   PUSH  rB0
-   MOV   rA3,rB3
-   MOV   rA2,rB2
-   MOV   rA1,rB1
-   MOV   rA0,rB0
-   RCALL _U(__fixsfsi)
+.L_negx:
+	rcall	__fp_tstB
+	brcs	.L_pow		; --> NaN, as x < 0
+	breq	.L_absx
+  /* Now we have:
+     y is normal, nonzero value
+     ZL == (rB2 << 1)
+     ZH == exponenta,  ZH <= 254	*/
+	sec		; hidden bit
+	ror	ZL	; This is incorrect for subnormals, no sense:
+			;   result would NaN.
+  /* ffs().  Next two loops are finite due to above 'sec'.	*/
+	X_movw	XL, rB0
+  /* Byte search loop.	*/
+1:	tst	XL
+	brne	2f
+	mov	XL, XH
+	mov	XH, ZL
+	subi	ZH, -8
+	brcs	1b
+	rjmp	.L_pow		; mantisa too big
+  /* Bit search loop.	*/
+2:	subi	ZH, -1
+	brcc	.L_pow		; mantisa too big
+	lsr	XL
+	brcc	2b
+  /* Check exponent, is y an integral value?
+     Example:  1.0 == 0x3f800000:
+	    __fp_tstB:	 ZH := 0x7f
+	    byte search: ZH += 2*8       --> 0x8f
+	    bit search:  ZH += 8         --> 0x97	*/
+	cpi	ZH, 0x97
+	brlo	.L_nan
+	breq	3f		; y % 2 == 1
+.L_absx:
+	andi	rA3, 0x7f	; y is integral, y % 2 == 0
+3:	push	rA3
+	andi	rA3, 0x7f
+	rcall	.L_pow
+	pop	ZL
+	andi	ZL, 0x80
+	eor	rA3, ZL
+.L_ret:
+	ret
 
-   RCALL _U(__subsf3)
-   CP    rA3,rT1c
-   CPC   rA2,rT1c
-   CPC   rA1,rT1c
-   CPC   rA0,rT1c
-   POP   rB0
-   POP   rB1
-   POP   rB2
-   POP   rB3
-   POP   rA0
-   POP   rA1
-   POP   rA2
-   POP   rA3
-   BREQ  2f
-   ANDI  rA3,0x7F
-   SUBI  rB3,0x80
-   RCALL 1b
-   SUBI  rB3,0x80
+/* Test of 32-bits float value in rA0..rA3 registers.
+   Return:
+	C = 1	Z = 0	T = *	, if NaN
+	C = 0	Z = 1	T = 0	, if 0.0 (or -0.0)
+	C = 0	Z = 0	T = 1	, if < 0.0
+	C = 0	Z = 0	T = 0	, if > 0.0
+	ZL = (rA2 << 1)
+	ZH = exponent (without subnormals correction)
+   Value and other registers are not changed.
+ */
+__fp_tstA:
+	clt
+	X_movw	ZL, rA2
+	lsl	ZL
+	rol	ZH
+	adiw	ZL, 0
+	cpc	rA0, __zero_reg__
+	cpc	rA1, __zero_reg__
+	breq	1f		; C == 0, Z == 1
+	inc	ZH
+	sbci	ZH, 1		; C == 0/1, Z == 0
+	bst	rA3, 7		; sign bit
+1:	ret
 
-2:
-   RJMP  _U(__fp_nanEDOM)
-
-10:
-   LDI   rA3,0x3F
-   LDI   rA2,0x80
-   CLR   rA1
-   CLR   rA0
-   RET
+/* Test of 32-bits float value in rB0..rB3 registers.
+   Return:
+	C = 1	Z = 0	T = *	, if NaN
+	C = 0	Z = 1	T = 0	, if 0.0 (or -0.0)
+	C = 0	Z = 0	T = 1	, if < 0.0
+	C = 0	Z = 0	T = 0	, if > 0.0
+	ZL = (rB2 << 1)
+	ZH = exponent (without subnormals correction)
+   Value and other registers are not changed.
+ */
+__fp_tstB:
+	clt
+	X_movw	ZL, rB2
+	lsl	ZL
+	rol	ZH
+	adiw	ZL, 0
+	cpc	rB0, __zero_reg__
+	cpc	rB1, __zero_reg__
+	breq	1f		; C == 0, Z == 1
+	inc	ZH
+	sbci	ZH, 1		; C == 0/1, Z == 0
+	bst	rB3, 7		; sign bit
+1:	ret
 
           ENDFUNC
-
-
